--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.11.0",
     "react-signature-canvas": "^1.1.0-alpha.2",
+    "react-spinners": "^0.17.0",
     "recharts": "^3.6.0",
     "tailwindcss": "^4.1.18"
   },
